# prog2

jetbrains/progetto1/: CMakeLists.txt  main.c
progetto1/: test.c
progetto1/include/: stoib.h
progetto1/src/: stoib.c
progetto2/: CMakeLists.txt  main.c
progetto2/include/: contact.h
progetto2/source/: contact.c
progetto3/: CMakeLists.txt  reproduce_issue  reproduce_issue.c  tests
progetto3/include/: charArrayQueue.h  charQueueADT.h
progetto3/source/: charQueueADT.c  main.c
progetto4/: CMakeLists.txt  README.md  compile.sh  compiledebug.sh  compilerun.sh  gsession.txt
progetto4/include/: charQueueADT.h  linkedListQueue.h  tests.h
progetto4/source/: charLinkedListQueueADT.c  main.c  tests.c
progetto4/source/unity/: unity.c
progetto5/: CMakeLists.txt  progetto5
progetto5/compile/: compile.sh  compiledebug.sh  compilerun.sh
progetto5/include/: intSortedSetADT.h
progetto5/src/: intLinkedListSortedSetADT.c  test_intLinkedListSortedSetADT.c
progetto6/: CMakeLists.txt  GEMINI.md  README.md  repro  repro.c
progetto6/compile/: compile.sh  compiledebug.sh  compilerun.sh
progetto6/include/: ram.h  tests.h
progetto6/src/: main.c  ram.c  tests.c
